<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parquet_laminate_flooring_3"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_box"
            android:elevation="2dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/login_title"
                android:elevation="5dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:paddingTop="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.05"
                        android:tint="#6c5b4f"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/oldPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.85"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:tint="#616457"
                        android:layout_weight="0.05"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/newPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.85"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.05"
                        android:tint="#616457"
                        android:src="@drawable/lock" />

                    <EditText
                        android:id="@+id/confirmNewPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.85"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="25dp"
                    android:paddingTop="15dp">

                    <Button
                        android:id="@+id/changeBtn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/login_btn_style"
                        android:gravity="center"
                        android:text="@string/change"
                        android:textColor="#ffffff"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>



</LinearLayout>
